updated and working code

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,18 @@ rad.json
 *.flf
 #Test results file
 TestResults.xml
+
+### Airflow Data Pipeline ###
+.env
+logs/
+plugins/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
